# jiutian-langchain-corse

./: main.py  pyproject.toml
docs/LangChain项目脚本/: auto_playwright.py  data_analysis.py  langchain_rag.py  playwright_pdf_agent.py
docs/MCP+LangChain相关脚本/: langchain-chatbot.py
docs/数据/: global_cities_data.csv
docs/课件&代码/: 2.各类模型接入LangChain流程.ipynb  3.LangChain链条创建与LCEL语法.ipynb  4.LangChain记忆存储与搭建多轮对话机器人.ipynb  5.LangChain接入工具流程.ipynb  6.LangChain Agent进阶功能介绍.ipynb  7.LangChain接入MCP完整实现流程.ipynb  8.LangChain+RAG技术实战.ipynb  9.LangChain搭建AI数据分析助手.ipynb
ipynb/: 2.各类模型接入langchain.ipynb  3.LangChain链条与LCEL.ipynb  4.LangChain记忆.ipynb  5.LangChain接入工具.ipynb  6.LangChain Agent进阶.ipynb
mcp-client/: client.py  langchain_chatbot.py  pyproject.toml  weather_server.py  write_server.py
py/: 4_1_chatbot_gradio.py  auto_playwright.py  langchain_rag.py  playwrite_pdf_agent.py
