[project]
name = "jiutian-langchain-corse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "gradio>=5.36.2",
    "jupyter>=1.1.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-deepseek>=0.1.3",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.27",
    "langchain-tavily>=0.2.7",
    "lxml>=6.0.0",
    "openai>=1.93.3",
    "pandas>=2.3.1",
    "playwright>=1.53.0",
    "reportlab>=4.4.2",
]
